feat: Add complexity features AutoSelect, with complexity vote system

--- a/sample.ipynb
+++ b/sample.ipynb
@@ -2,393 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\mathe\\AppData\\Roaming\\Python\\Python311\\site-packages\\deap\\creator.py:138: RuntimeWarning: A class named 'FitnessMult' has already been created and it will be overwritten. Consider deleting previous creation of that class or rename it.\n",
-      "  warnings.warn(\"A class named '{0}' has already been created and it \"\n",
-      "C:\\Users\\mathe\\AppData\\Roaming\\Python\\Python311\\site-packages\\deap\\creator.py:138: RuntimeWarning: A class named 'Individual' has already been created and it will be overwritten. Consider deleting previous creation of that class or rename it.\n",
-      "  warnings.warn(\"A class named '{0}' has already been created and it \"\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "gen\tnevals\n",
-      "0  \t100   \n",
-      "1  \t100   \n",
-      "2  \t100   \n",
-      "3  \t100   \n",
-      "4  \t100   \n",
-      "5  \t100   \n",
-      "6  \t100   \n",
-      "7  \t100   \n",
-      "8  \t100   \n",
-      "9  \t100   \n",
-      "10 \t100   \n",
-      "11 \t100   \n",
-      "12 \t100   \n",
-      "13 \t100   \n",
-      "14 \t100   \n",
-      "15 \t100   \n",
-      "16 \t100   \n",
-      "17 \t100   \n",
-      "18 \t100   \n",
-      "19 \t100   \n",
-      "20 \t100   \n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\mathe\\AppData\\Roaming\\Python\\Python311\\site-packages\\deap\\creator.py:138: RuntimeWarning: A class named 'FitnessMult' has already been created and it will be overwritten. Consider deleting previous creation of that class or rename it.\n",
-      "  warnings.warn(\"A class named '{0}' has already been created and it \"\n",
-      "C:\\Users\\mathe\\AppData\\Roaming\\Python\\Python311\\site-packages\\deap\\creator.py:138: RuntimeWarning: A class named 'Individual' has already been created and it will be overwritten. Consider deleting previous creation of that class or rename it.\n",
-      "  warnings.warn(\"A class named '{0}' has already been created and it \"\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "gen\tnevals\n",
-      "0  \t100   \n",
-      "1  \t100   \n",
-      "2  \t100   \n",
-      "3  \t100   \n",
-      "4  \t100   \n",
-      "5  \t100   \n",
-      "6  \t100   \n",
-      "7  \t100   \n",
-      "8  \t100   \n",
-      "9  \t100   \n",
-      "10 \t100   \n",
-      "11 \t100   \n",
-      "12 \t100   \n",
-      "13 \t100   \n",
-      "14 \t100   \n",
-      "15 \t100   \n",
-      "16 \t100   \n",
-      "17 \t100   \n",
-      "18 \t100   \n",
-      "19 \t100   \n",
-      "20 \t100   \n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\mathe\\AppData\\Roaming\\Python\\Python311\\site-packages\\deap\\creator.py:138: RuntimeWarning: A class named 'FitnessMult' has already been created and it will be overwritten. Consider deleting previous creation of that class or rename it.\n",
-      "  warnings.warn(\"A class named '{0}' has already been created and it \"\n",
-      "C:\\Users\\mathe\\AppData\\Roaming\\Python\\Python311\\site-packages\\deap\\creator.py:138: RuntimeWarning: A class named 'Individual' has already been created and it will be overwritten. Consider deleting previous creation of that class or rename it.\n",
-      "  warnings.warn(\"A class named '{0}' has already been created and it \"\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "gen\tnevals\n",
-      "0  \t100   \n",
-      "1  \t100   \n",
-      "2  \t100   \n",
-      "3  \t100   \n",
-      "4  \t100   \n",
-      "5  \t100   \n",
-      "6  \t100   \n",
-      "7  \t100   \n",
-      "8  \t100   \n",
-      "9  \t100   \n",
-      "10 \t100   \n",
-      "11 \t100   \n",
-      "12 \t100   \n",
-      "13 \t100   \n",
-      "14 \t100   \n",
-      "15 \t100   \n",
-      "16 \t100   \n",
-      "17 \t100   \n",
-      "18 \t100   \n",
-      "19 \t100   \n",
-      "20 \t100   \n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\mathe\\AppData\\Roaming\\Python\\Python311\\site-packages\\deap\\creator.py:138: RuntimeWarning: A class named 'FitnessMult' has already been created and it will be overwritten. Consider deleting previous creation of that class or rename it.\n",
-      "  warnings.warn(\"A class named '{0}' has already been created and it \"\n",
-      "C:\\Users\\mathe\\AppData\\Roaming\\Python\\Python311\\site-packages\\deap\\creator.py:138: RuntimeWarning: A class named 'Individual' has already been created and it will be overwritten. Consider deleting previous creation of that class or rename it.\n",
-      "  warnings.warn(\"A class named '{0}' has already been created and it \"\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "gen\tnevals\n",
-      "0  \t100   \n",
-      "1  \t100   \n",
-      "2  \t100   \n",
-      "3  \t100   \n",
-      "4  \t100   \n",
-      "5  \t100   \n",
-      "6  \t100   \n",
-      "7  \t100   \n",
-      "8  \t100   \n",
-      "9  \t100   \n",
-      "10 \t100   \n",
-      "11 \t100   \n",
-      "12 \t100   \n",
-      "13 \t100   \n",
-      "14 \t100   \n",
-      "15 \t100   \n",
-      "16 \t100   \n",
-      "17 \t100   \n",
-      "18 \t100   \n",
-      "19 \t100   \n",
-      "20 \t100   \n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\mathe\\AppData\\Roaming\\Python\\Python311\\site-packages\\deap\\creator.py:138: RuntimeWarning: A class named 'FitnessMult' has already been created and it will be overwritten. Consider deleting previous creation of that class or rename it.\n",
-      "  warnings.warn(\"A class named '{0}' has already been created and it \"\n",
-      "C:\\Users\\mathe\\AppData\\Roaming\\Python\\Python311\\site-packages\\deap\\creator.py:138: RuntimeWarning: A class named 'Individual' has already been created and it will be overwritten. Consider deleting previous creation of that class or rename it.\n",
-      "  warnings.warn(\"A class named '{0}' has already been created and it \"\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "gen\tnevals\n",
-      "0  \t100   \n",
-      "1  \t100   \n",
-      "2  \t100   \n",
-      "3  \t100   \n",
-      "4  \t100   \n",
-      "5  \t100   \n",
-      "6  \t100   \n",
-      "7  \t100   \n",
-      "8  \t100   \n",
-      "9  \t100   \n",
-      "10 \t100   \n",
-      "11 \t100   \n",
-      "12 \t100   \n",
-      "13 \t100   \n",
-      "14 \t100   \n",
-      "15 \t100   \n",
-      "16 \t100   \n",
-      "17 \t100   \n",
-      "18 \t100   \n",
-      "19 \t100   \n",
-      "20 \t100   \n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\mathe\\AppData\\Roaming\\Python\\Python311\\site-packages\\deap\\creator.py:138: RuntimeWarning: A class named 'FitnessMult' has already been created and it will be overwritten. Consider deleting previous creation of that class or rename it.\n",
-      "  warnings.warn(\"A class named '{0}' has already been created and it \"\n",
-      "C:\\Users\\mathe\\AppData\\Roaming\\Python\\Python311\\site-packages\\deap\\creator.py:138: RuntimeWarning: A class named 'Individual' has already been created and it will be overwritten. Consider deleting previous creation of that class or rename it.\n",
-      "  warnings.warn(\"A class named '{0}' has already been created and it \"\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "gen\tnevals\n",
-      "0  \t100   \n",
-      "1  \t100   \n",
-      "2  \t100   \n",
-      "3  \t100   \n",
-      "4  \t100   \n",
-      "5  \t100   \n",
-      "6  \t100   \n",
-      "7  \t100   \n",
-      "8  \t100   \n",
-      "9  \t100   \n",
-      "10 \t100   \n",
-      "11 \t100   \n",
-      "12 \t100   \n",
-      "13 \t100   \n",
-      "14 \t100   \n",
-      "15 \t100   \n",
-      "16 \t100   \n",
-      "17 \t100   \n",
-      "18 \t100   \n",
-      "19 \t100   \n",
-      "20 \t100   \n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\mathe\\AppData\\Roaming\\Python\\Python311\\site-packages\\deap\\creator.py:138: RuntimeWarning: A class named 'FitnessMult' has already been created and it will be overwritten. Consider deleting previous creation of that class or rename it.\n",
-      "  warnings.warn(\"A class named '{0}' has already been created and it \"\n",
-      "C:\\Users\\mathe\\AppData\\Roaming\\Python\\Python311\\site-packages\\deap\\creator.py:138: RuntimeWarning: A class named 'Individual' has already been created and it will be overwritten. Consider deleting previous creation of that class or rename it.\n",
-      "  warnings.warn(\"A class named '{0}' has already been created and it \"\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "gen\tnevals\n",
-      "0  \t100   \n",
-      "1  \t100   \n",
-      "2  \t100   \n",
-      "3  \t100   \n",
-      "4  \t100   \n",
-      "5  \t100   \n",
-      "6  \t100   \n",
-      "7  \t100   \n",
-      "8  \t100   \n",
-      "9  \t100   \n",
-      "10 \t100   \n",
-      "11 \t100   \n",
-      "12 \t100   \n",
-      "13 \t100   \n",
-      "14 \t100   \n",
-      "15 \t100   \n",
-      "16 \t100   \n",
-      "17 \t100   \n",
-      "18 \t100   \n",
-      "19 \t100   \n",
-      "20 \t100   \n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\mathe\\AppData\\Roaming\\Python\\Python311\\site-packages\\deap\\creator.py:138: RuntimeWarning: A class named 'FitnessMult' has already been created and it will be overwritten. Consider deleting previous creation of that class or rename it.\n",
-      "  warnings.warn(\"A class named '{0}' has already been created and it \"\n",
-      "C:\\Users\\mathe\\AppData\\Roaming\\Python\\Python311\\site-packages\\deap\\creator.py:138: RuntimeWarning: A class named 'Individual' has already been created and it will be overwritten. Consider deleting previous creation of that class or rename it.\n",
-      "  warnings.warn(\"A class named '{0}' has already been created and it \"\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "gen\tnevals\n",
-      "0  \t100   \n",
-      "1  \t100   \n",
-      "2  \t100   \n",
-      "3  \t100   \n",
-      "4  \t100   \n",
-      "5  \t100   \n",
-      "6  \t100   \n",
-      "7  \t100   \n",
-      "8  \t100   \n",
-      "9  \t100   \n",
-      "10 \t100   \n",
-      "11 \t100   \n",
-      "12 \t100   \n",
-      "13 \t100   \n",
-      "14 \t100   \n",
-      "15 \t100   \n",
-      "16 \t100   \n",
-      "17 \t100   \n",
-      "18 \t100   \n",
-      "19 \t100   \n",
-      "20 \t100   \n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\mathe\\AppData\\Roaming\\Python\\Python311\\site-packages\\deap\\creator.py:138: RuntimeWarning: A class named 'FitnessMult' has already been created and it will be overwritten. Consider deleting previous creation of that class or rename it.\n",
-      "  warnings.warn(\"A class named '{0}' has already been created and it \"\n",
-      "C:\\Users\\mathe\\AppData\\Roaming\\Python\\Python311\\site-packages\\deap\\creator.py:138: RuntimeWarning: A class named 'Individual' has already been created and it will be overwritten. Consider deleting previous creation of that class or rename it.\n",
-      "  warnings.warn(\"A class named '{0}' has already been created and it \"\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "gen\tnevals\n",
-      "0  \t100   \n",
-      "1  \t100   \n",
-      "2  \t100   \n",
-      "3  \t100   \n",
-      "4  \t100   \n",
-      "5  \t100   \n",
-      "6  \t100   \n",
-      "7  \t100   \n",
-      "8  \t100   \n",
-      "9  \t100   \n",
-      "10 \t100   \n",
-      "11 \t100   \n",
-      "12 \t100   \n",
-      "13 \t100   \n",
-      "14 \t100   \n",
-      "15 \t100   \n",
-      "16 \t100   \n",
-      "17 \t100   \n",
-      "18 \t100   \n",
-      "19 \t100   \n",
-      "20 \t100   \n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\mathe\\AppData\\Roaming\\Python\\Python311\\site-packages\\deap\\creator.py:138: RuntimeWarning: A class named 'FitnessMult' has already been created and it will be overwritten. Consider deleting previous creation of that class or rename it.\n",
-      "  warnings.warn(\"A class named '{0}' has already been created and it \"\n",
-      "C:\\Users\\mathe\\AppData\\Roaming\\Python\\Python311\\site-packages\\deap\\creator.py:138: RuntimeWarning: A class named 'Individual' has already been created and it will be overwritten. Consider deleting previous creation of that class or rename it.\n",
-      "  warnings.warn(\"A class named '{0}' has already been created and it \"\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "gen\tnevals\n",
-      "0  \t100   \n",
-      "1  \t100   \n",
-      "2  \t100   \n",
-      "3  \t100   \n",
-      "4  \t100   \n",
-      "5  \t100   \n",
-      "6  \t100   \n",
-      "7  \t100   \n",
-      "8  \t100   \n",
-      "9  \t100   \n",
-      "10 \t100   \n",
-      "11 \t100   \n",
-      "12 \t100   \n",
-      "13 \t100   \n",
-      "14 \t100   \n",
-      "15 \t100   \n",
-      "16 \t100   \n",
-      "17 \t100   \n",
-      "18 \t100   \n",
-      "19 \t100   \n",
-      "20 \t100   \n",
-      "0.875\n",
-      "0.8888888888888888\n",
-      "0.8888888888888888\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from sklearn.tree import DecisionTreeClassifier\n",
     "from pool_generation import poolGeneration\n",
@@ -404,10 +20,9 @@
     "X,y = load_wine(return_X_y=True, as_frame=False)\n",
     "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.4, random_state=42)\n",
     "\n",
-    ", , X_valid, y_valid = train_test_split(X_train, y_train, test_size=0.4, random_state=42)\n",
+    "_, X_valid,_ , y_valid = train_test_split(X_train, y_train, test_size=0.4, random_state=42)\n",
     "\n",
     "pool = poolGeneration(nr_generation = 20)\n",
-    "\n",
     "\n",
     "pool.generate(X_train, y_train, X_test, y_test, 10)\n",
     "\n",
